--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://t.me/johncenacoin">Telegram</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://twitter.com/cenacoinbsc/">Twitter</a>
+                                </li>
                             </ul>
                         </div>
                         <ul class="nav justify-content-end">
@@ -430,12 +433,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-3 col-md-6 col-sm-12 iq-mtb-60">
-                        <div class="logo">
+                        <div class="logo text-center">
                             <img id="logo_img_2" class="img-fluid" src="images/logo.png" alt="# ">
-                            <div class="iq-font-white iq-mt-15 "> 
-
+                            <div style="font-size: 30px;" class="text-center iq-font-white iq-mt-15 "> 
+                                The TIME is NOW!
                             </div>
                         </div>
+                    </div>
+                    <div class="col-lg-6 align-self-center">
+                        <img src="images/watc.png" class="img-fluid" alt="about_img">
                     </div>
                     <div class="col-lg-2 col-md-6 col-sm-12 iq-mtb-60 footer-menu">
                         <h5 class="small-title iq-tw-5 iq-font-white">Menu</h5>
@@ -446,6 +452,7 @@
                             <li><a href="https://poocoin.app/tokens/0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5"                                >Charts</a></li>
                         </ul>
                     </div>
+   
                 </div>
             </div>
         </div>
@@ -459,6 +466,7 @@
                 </div>
             </div>
         </div>
+        
     </footer>
     <!--=================================
     Footer -->
