--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                                         <td>10%</td>
                                     </tr>
                                     <tr>
-                                        <td>Marketing</td>
-                                        <td>4%</td>
+                                        <td>Marketing/Auto Liquidity</td>
+                                        <td>6% /4%</td>
                                     </tr>
                                 </tbody>
                             </table>
