--- a/index.html
+++ b/index.html
@@ -450,6 +450,7 @@
                             <li><a href="https://bscscan.com/address/0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5 ">Contract</a></li>
                             <li><a href="https://pancakeswap.finance/swap?outputCurrency=0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5&chainId=56 ">PancakeSwap</a></li>
                             <li><a href="https://poocoin.app/tokens/0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5"                                >Charts</a></li>
+                            <li><a href="https://twitter.com/cenacoinbsc/">Twitter</a></li>
                         </ul>
                     </div>
    
