--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
                             </h2>
                             <a href="https://pancakeswap.finance/swap?outputCurrency=0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5&chainId=56" style="color: black;" class="button iq-mt-20 iq-ml-10">Buy now</a>
                             <a href="https://t.me/johncenacoin" class="button bt-white iq-mt-20 iq-ml-10" style="color: white;">Join Telegram</a>
+                            
+                            <img src="images/bsc.PNG" class="mt-2 img-fluid" width="120px" alt="about_img ">
 
 
                         </div>
