--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                     <div class="col-lg-6 align-self-center">
                         <div class="banner-text text-left iq-font-white">
                             <h1 class="iq-font-white iq-tw-7 iq-mb-20">John Cena 
-                                <b class="iq-font-yellow">Coin</b> </h1>
+                                <b class="iq-font-yellow" style="color: #1e5429">Coin</b> </h1>
                             <h2 class="iq-font-white iq-tw-7 iq-mb-20">The Time Is Now! 
                                 <br>
 
@@ -129,7 +129,7 @@
                             <a href="https://pancakeswap.finance/swap?outputCurrency=0x4f00f4cad2394dcff9fb025d94cf29a1bf1128d5&chainId=56" style="color: black;" class="button iq-mt-20 iq-ml-10">Buy now</a>
                             <a href="https://t.me/johncenacoin" class="button bt-white iq-mt-20 iq-ml-10" style="color: white;">Join Telegram</a>
                             
-                            <img src="images/bsc.PNG" class="mt-2 img-fluid" width="45px" alt="about_img ">
+                            <img src="images/bsc.PNG" class="mt-2 img-fluid text-center" width="45px" alt="about_img ">
 
 
                         </div>
